more content, new partials, etc

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,7 @@
+@import "variables";
+@import "base";
+@import "layout";
 @import "music";
-@import "style";
 @import "typewriter";
+@import "card";
+@import "custom";
