--- a/sass/_music.scss
+++ b/sass/_music.scss
@@ -4,15 +4,28 @@
 //   box-sizing: border-box;
 // }
 
-.div-body {
-  margin: 0;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 12px;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+// h2 {
+//   font-size: 25px;
+//   text-align: center;
+//   font-weight: 500;
+//   margin: 10px 0 0;
+// }
+
+// h3 {
+//   font-size: 18px;
+//   text-align: center;
+//   font-weight: 500;
+//   margin: 10px 0 0;
+// }
+
+// body {
+//   margin: 0;
+//   font-size: 12px;
+//   min-height: 100vh;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
 
 .background {
   position: fixed;
@@ -37,7 +50,7 @@
   transform: scale(1.1);
 }
 
-.container {
+.contenedor {
   background-color: #e7e7e7;
   height: 500px;
   width: 400px;
@@ -46,7 +59,7 @@
   transition: all 0.5s ease;
 }
 
-.container:hover {
+.contenedor:hover {
   box-shadow: 0 15px 30px rgba(0, 0, 0, 0.6);
 }
 
@@ -76,20 +89,6 @@
   height: 100%;
   transition: all 0.5s;
   opacity: 1;
-}
-
-h2 {
-  font-size: 25px;
-  text-align: center;
-  font-weight: 500;
-  margin: 10px 0 0;
-}
-
-h3 {
-  font-size: 18px;
-  text-align: center;
-  font-weight: 500;
-  margin: 10px 0 0;
 }
 
 .player-progress {
