--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,3 @@
-{% import 'macros.html' as macros %}
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,6 +16,7 @@
   {% block content %}{% endblock content %}
 
   <script src="{{ get_url(path="card.js") | safe }}"></script>
+  <script src="{{ get_url(path="music.js") | safe }}"></script>
 </body>
 
 </html>
