--- a/templates/page.html
+++ b/templates/page.html
@@ -6,6 +6,8 @@
 
 {% include "partials/typewriter.html" %}
 
+{% include "partials/card.html" %}
+
 {{ page.content | safe }}
 
 {% endblock content %}
