--- a/sass/_typewriter.scss
+++ b/sass/_typewriter.scss
@@ -12,7 +12,8 @@
 }
 
 .anim-typewriter {
-  animation: typewriter 3s steps(44) 1s 1 normal both,
+  animation:
+    typewriter 3s steps(44) 1s 1 normal both,
     blinkTextCursor 500ms steps(36) infinite normal;
 }
 
