--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <h1>{{ section.title }}</h1>
 
-{% include "partials/card.html" %}
+{# {% include "partials/card.html" %} #}
 
 {{ section.content | safe }}
 
