--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,9 @@
 }
 
 $default-color: var(--default-color);
+$system-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial,
+sans-serif;
 
 @import
 "base",
