--- a/templates/music.html
+++ b/templates/music.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 
-<h1 style="color: #fff;">{{ page.title }}</h1>
+{#  style="color: #fff;" #}
+<h1>{{ page.title }}</h1>
 
 {{ page.content | safe }}
 
