--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,22 +1,8 @@
-:root {
-  --default-color: #555;
-  --color-gradient: linear-gradient(90deg, #eee, #f9f9f9, #eee);
-  --color-background: #d9d9d9;
-  --color-card-background: #fff;
-  --color-header: #000;
-  --color-info: #363949;
-  --box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
+@charset "utf-8";
 
-$default-color: var(--default-color);
-$system-font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', Helvetica, Arial,
-sans-serif;
-
-@import
-"base",
-"music",
-"typewriter",
-"card",
-"custom"
-;
+@use "normalize";
+@use "variables";
+@use "base";
+@use "card";
+@use "music";
+@use "typewriter";
