--- a/templates/music.html
+++ b/templates/music.html
@@ -7,6 +7,6 @@
 
 {{ page.content | safe }}
 
-{% include "partials/music-player.html" %}
+{# {% include "partials/music-player.html" %} #}
 
 {% endblock content %}
