--- a/templates/base.html
+++ b/templates/base.html
@@ -12,16 +12,20 @@
 </head>
 
 <body>
-  <div class="container">
+
+  <section class="container">
     <main>
       {% block content %}{% endblock content %}
-      <p>This element is 1fr large.</p>
     </main>
+
     <aside>
       {% include "partials/navigation.html" %}
-      <p>Min: 150px / Max: 20%</p>
     </aside>
-  </div>
+  </section>
+
+  <footer>
+    <p>This is the footer.</p>
+  </footer>
 
   <script src="{{ get_url(path="card.js") | safe }}"></script>
   <script src="{{ get_url(path="music.js") | safe }}"></script>
