--- a/templates/page.html
+++ b/templates/page.html
@@ -4,9 +4,9 @@
 
 <h1>{{ page.title }}</h1>
 
-{% include "partials/typewriter.html" %}
+{# {% include "partials/typewriter.html" %} #}
 
-{% include "partials/card.html" %}
+{# {% include "partials/card.html" %} #}
 
 {{ page.content | safe }}
 
