good save point

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,15 +20,21 @@ body {
   transition: all 0.3s ease;
 }
 
-footer {
-  text-align: center;
-}
-
 .container {
   display: grid;
-  grid-template-columns: 1fr minmax(150px, 20%);
   margin: 0 auto;
   max-width: variables.$page-width;
+  grid-template-columns: 1fr minmax(150px, 20%);
+}
+
+.container-alt {
+  display: grid;
+  margin: 0 auto;
+  max-width: variables.$page-width;
+  grid-template-areas:
+    "header header"
+    "main aside"
+    "site-footer site-footer";
 }
 
 main,
@@ -39,10 +45,18 @@ aside {
 main {
   background: inherit;
   background: #d4f2c4;
+  grid-area: main;
 }
 
 aside {
   // max-width: $sidebar-width;
   background: inherit;
   background: #81cfd9;
+  grid-area: aside;
+}
+
+footer {
+  grid-area: site-footer;
+  text-align: center;
+  margin-top: auto;
 }
