--- a/templates/page.html
+++ b/templates/page.html
@@ -4,6 +4,8 @@
 
 <h1>{{ page.title }}</h1>
 
+{# {% include "partials/hamburger.html" %} #}
+
 {# {% include "partials/typewriter.html" %} #}
 
 {# {% include "partials/card.html" %} #}
