--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
 @use "normalize";
-@use "variables";
+@use "vars";
 @use "base";
-@use "hamburger";
-@use "card";
-@use "music";
-@use "typewriter";
+// @use "card";
+// @use "hamburger";
+// @use "music";
+// @use "typewriter";
