--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,10 +1,7 @@
 <footer>
   <ul>
-    <li><a href="/">Home
-      </a></li>
-    <li><a href="/test">Test
-      </a></li>
-    <li><a href="/music">Music
-      </a></li>
+    <li><a href="/">Home </a></li>
+    <li><a href="/test">Test </a></li>
+    <li><a href="/music">Music </a></li>
   </ul>
 </footer>
