--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,12 +2,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
 * {
+  @include vars.box-sizing;
   // font-family: vars.$system-font;
   font-family: "Poppins", sans-serif;
   line-height: 1.5;
 }
 
 html {
+  color: vars.$font-color;
+  background-color: vars.$background-color;
   scroll-behavior: smooth;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
@@ -15,17 +18,18 @@ html {
 }
 
 body {
-  @include vars.box-sizing;
+  @include vars.box-sizing();
   background: vars.$background-color;
   transition: all 0.3s ease;
-
   display: grid;
-  margin: 0 auto;
-  max-width: vars.$page-width;
   grid-template-areas:
-    // "header header"
-    "main aside"
-    "footer footer";
+  // "header header"
+  "main aside"
+  "footer footer";
+  grid-template-rows: auto;
+  grid-template-columns: vars.$page-width vars.$sidebar-width;
+  margin: 0 auto;
+  width: vars.$page-width;
 }
 
 main,
@@ -39,7 +43,7 @@ main {
 }
 
 aside {
-  // max-width: $sidebar-width;
+  // max-width: vars.$sidebar-width;
   grid-area: aside;
   background: #81cfd9;
 }
@@ -47,5 +51,20 @@ aside {
 footer {
   grid-area: footer;
   text-align: center;
-  // margin-top: auto;
+  margin-top: auto;
+}
+
+a {
+  text-decoration: none;
+}
+
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+  // margin: 0.5rem 0 0;
+
+  a {
+    text-decoration: underline;
+  }
 }
