--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,9 @@
 <body>
 
     <main>
-      {% block pagetitle %}<h1>Forgotten Title</h1>{% endblock pagetitle %}
+      {% block pagetitle %}<h1>Forgotten Title</h1>
+      {% endblock pagetitle %}
+
       {% block content %}{% endblock content %}
     </main>
 
