--- a/templates/music.html
+++ b/templates/music.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block pagetitle %}
 
 <h1>{{ page.title }}</h1>
+
+{% endblock pagetitle %}
+
+{% block content %}
+
 
 {{ page.content | safe }}
 
