--- a/templates/page.html
+++ b/templates/page.html
@@ -1,8 +1,12 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block pagetitle %}
 
 <h1>{{ page.title }}</h1>
+
+{% endblock pagetitle %}
+
+{% block content %}
 
 {# {% include "partials/hamburger.html" %} #}
 
