--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -29,7 +29,7 @@ body {
   // grid-template-rows: auto;
   // grid-template-columns: vars.$page-width vars.$sidebar-width;
   margin: 0 auto;
-  max-width: 800px;
+  max-width: calc(vars.$page-width + vars.$page-width);
 }
 
 main,
