--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><a href="{% config.base_url %}">Home </a></li>
+    <li><a href="{{ config.base_url }}">Home </a></li>
     <li><a href="test/">Test </a></li>
     <li><a href="music/">Music </a></li>
   </ul>
