--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -18,24 +18,48 @@ html {
   scroll-behavior: smooth;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 body {
-  min-height: 100vh;
-  grid-template-rows: 1fr auto;
-  grid-template-columns: 1fr auto;
   @include vars.box-sizing();
   background: vars.$background-color;
   transition: all 0.3s ease;
   display: grid;
+  grid-template-rows: 1fr auto;
+  grid-template-columns: 1fr auto;
   grid-template-areas:
     "main aside"
     "footer footer";
   max-width: calc(vars.$page-width + vars.$sidebar-width);
+  min-height: 100vh;
   margin: 0 auto;
 
-  @media (max-width: vars.$mobile-breakpoint) {
+  @media (max-width: 600px) {
+    display: grid;
+    grid-template-areas:
+      "main"
+      "aside"
+      "footer";
+  }
+}
+
+body.sections {
+  @include vars.box-sizing();
+  background: vars.$background-color;
+  transition: all 0.3s ease;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-template-columns: 1fr auto;
+  grid-template-areas:
+    "aside main"
+    "footer footer";
+  max-width: calc(vars.$page-width + vars.$sidebar-width);
+  min-height: 100vh;
+  margin: 0 auto;
+
+  @media (max-width: 600px) {
+    display: grid;
     grid-template-areas:
       "main"
       "aside"
@@ -51,11 +75,13 @@ aside {
 main {
   background: #d4f2c4;
   grid-area: main;
+  max-width: vars.$page-width;
 }
 
 aside {
   background: #81cfd9;
   grid-area: aside;
+  min-width: vars.$sidebar-width;
 }
 
 footer {
@@ -73,10 +99,79 @@ footer ul {
 
 aside ul {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
+  // padding: 0;
+  // margin: 0;
 
   a {
     text-decoration: underline;
+  }
+}
+
+/* Code formatting */
+pre,
+code {
+  border: 1px solid vars.$border-color;
+  background-color: vars.$background-color;
+  border-radius: 4px;
+}
+
+code {
+  // padding:  3px;
+  line-height: 1.5;
+}
+
+pre {
+  padding: 0.5rem 1rem;
+  overflow-x: auto;
+
+  > code {
+    border: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+
+img {
+  display: block;
+  margin: 0 0 1rem;
+  max-width: 100%;
+}
+
+table {
+  margin: 0 auto;
+  color: vars.$font-color;
+  border: 1px solid vars.$border-color;
+  font-size: 12pt;
+  border-collapse: collapse;
+}
+
+table thead th,
+table tfoot th {
+  color: vars.$font-color;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+table caption {
+  padding: 0.5em;
+}
+
+table th,
+table td {
+  padding: 0.5em;
+  border: 1px solid vars.$border-color;
+}
+
+main {
+  padding-top: 1rem;
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
