--- a/templates/base.html
+++ b/templates/base.html
@@ -4,33 +4,40 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" itemprop="about" content="{{config.description}}">
-  <title>{% block title %}{{ config.title }}
-    {% endblock title %}</title>
+  <title>{% block title %}{{ config.title }}{% endblock title %}</title>
   {% include "partials/styles.html" %}
 </head>
 
+{# {% if section %}
+<body class="sections">
+{% endif %}
+
+{% if page %}
 <body>
+{% endif %} #}
+  
+  <body>
+  <main>
+    {# {% block pagetitle %}
+    <h1>Default Title</h1>
+    {% endblock pagetitle %} #}
 
-    <main>
-      {% block pagetitle %}
-      <h1>Forgotten Title</h1>
-      {% endblock pagetitle %}
+    {% block content %}
+    {% endblock content %}
+  </main>
 
-      {% block content %}
-      {% endblock content %}
-    </main>
+  <aside>
+    {% block sidebar %}
+    {% endblock sidebar %}
+  </aside>
 
-    <aside>
-      {% include "partials/sidebar.html" %}
-    </aside>
-    
-    <footer>
-      {% include "partials/footer.html" %}
-    </footer>
+  <footer>
+    {% include "partials/footer.html" %}
+  </footer>
 
-{% include "partials/scripts.html" %}
+  {# {% include "partials/scripts.html" %} #}
 
 </body>
 
