--- a/templates/page.html
+++ b/templates/page.html
@@ -1,19 +1,13 @@
 {% extends "base.html" %}
 
 {% block pagetitle %}
-
 <h1>{{ page.title }}</h1>
-
 {% endblock pagetitle %}
 
+{% block sidebar %}
+{% include "partials/sidebar-pages.html" %}
+{% endblock sidebar %}
+
 {% block content %}
-
-{# {% include "partials/hamburger.html" %} #}
-
-{# {% include "partials/typewriter.html" %} #}
-
-{# {% include "partials/card.html" %} #}
-
 {{ page.content | safe }}
-
 {% endblock content %}
