--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -35,7 +35,7 @@ body {
   min-height: 100vh;
   margin: 0 auto;
 
-  @media (max-width: 600px) {
+  @media (max-width: 750px) {
     display: grid;
     grid-template-areas:
       "aside"
@@ -52,18 +52,20 @@ body.sections {
   grid-template-rows: 1fr auto;
   grid-template-columns: 1fr auto;
   grid-template-areas:
-    "aside main"
-    "footer footer";
+  "aside main"
+  "footer footer";
   max-width: calc(vars.$page-width + vars.$sidebar-width);
   min-height: 100vh;
   margin: 0 auto;
-
-  @media (max-width: 600px) {
+  
+  @media (max-width: 750px) {
     display: grid;
     grid-template-areas:
-      "aside"
-      "main"
-      "footer";
+    "aside"
+    "main"
+    "footer";
+    grid-template-rows: auto 1fr auto;
+    // grid-template-columns: auto;
   }
 }
 
