--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
     <li><a href="{{ config.base_url }}">Home </a></li>
-    <li><a href="/test">Test </a></li>
-    <li><a href="/music">Music </a></li>
+    <li><a href="test/">Test </a></li>
+    <li><a href="music/">Music </a></li>
   </ul>
 </nav>
