--- a/templates/partials/sidebar-nav.html
+++ b/templates/partials/sidebar-nav.html
@@ -1,7 +1,14 @@
 <nav>
-  <ul>
-    <li><a href="{{ config.base_url }}">Home </a></li>
-    <li><a href="test/">Test </a></li>
-    <li><a href="music/">Music </a></li>
+  {%- for sidebar in config.extra.sidebar %}
+  <h3 class="sidebar-nav-title">
+    {{ sidebar.name }}
+  </h3>
+  <ul class="sublist-nav">
+    {%- for item in sidebar.urls %}
+    <li>
+      <a href="{{item.url}}" target="_blank">{{item.name}}</a>
+    </li>
+    {% endfor %}
   </ul>
+  {%- endfor %}
 </nav>
