--- a/templates/partials/sidebar-toc.html
+++ b/templates/partials/sidebar-toc.html
@@ -4,17 +4,17 @@
     Table of Contents
   </summary>
 
-  <ul class="sublist">
+  <ul class="sublist-toc">
     {% for h1 in page.toc %}
     <li>
       <a href="{{ h1.permalink | safe }}">{{ h1.title }}</a>
       {% if h1.children %}
-      <ul class="sublist">
+      <ul class="sublist-toc">
         {% for h2 in h1.children %}
         <li>
           <a href="{{ h2.permalink | safe }}">{{ h2.title }}</a>
 
-          <ul class="sublist">
+          <ul class="sublist-toc">
             {% for h3 in h2.children %}
             <li>
               <a href="{{ h3.permalink | safe }}">{{ h3.title }}</a>
