--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -11,12 +11,16 @@
   <p>{{ page.description }}
   </p>
 
+  {% include "partials/sidebar-nav.html" %}
+
   {% include "partials/sidebar-toc.html" %}
 
   {% elif section %}
+
   <p>{{ config.description }}</p>
 
   {% include "partials/sidebar-nav.html" %}
+  
   {% endif %}
 
 </section>
