--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -24,7 +24,7 @@ html {
   scroll-behavior: smooth;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
-  overflow-y: scroll;
+  // overflow-y: scroll;
   // overflow-x: hidden;
 }
 
@@ -48,6 +48,7 @@ body {
       "aside"
       "main"
       "footer";
+      margin: 0;
   }
 }
 
