--- a/sass/_catalogue.scss
+++ b/sass/_catalogue.scss
@@ -4,14 +4,14 @@
   text-decoration: none;
   color: vars.$font-color;
   display: block;
-  margin-bottom: 2rem;
+  // margin-bottom: 2rem;
 }
 
 .catalogue-title {
   color: vars.$font-color;
   line-height: 1.1em;
   font-weight: 600;
-  margin: 0 0 8px;
+  // margin: 0 0 8px;
 }
 
 .catalogue-line {
