--- a/sass/_code.scss
+++ b/sass/_code.scss
@@ -13,12 +13,12 @@ code {
 }
 
 pre {
-  padding: 0.5rem 1rem;
+  // padding: 0.5rem 1rem;
   // overflow-x: auto;
 
   > code {
     border: 0;
-    padding-right: 0;
-    padding-left: 0;
+    // padding-right: 0;
+    // padding-left: 0;
   }
 }
