--- a/sass/_pagination.scss
+++ b/sass/_pagination.scss
@@ -2,7 +2,7 @@
 
 .pagination {
   border-top: 0.5px solid vars.$border-color;
-  padding-top: 2rem;
+  // padding-top: 2rem;
   position: relative;
   text-align: center;
 
