--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -31,7 +31,7 @@
 .sidebar-title {
   color: vars.$font-color;
   font-size: 1.2rem;
-  margin-top: 0;
+  // margin-top: 0;
 }
 
 .sublist-nav,
@@ -39,6 +39,6 @@
   background: inherit;
   font-size: 14px; //16px
   list-style-type: none;
-  margin: 0;
-  margin-left: -1.5rem;
+  // margin: 0;
+  // margin-left: -1.5rem;
 }
