--- a/sass/_table.scss
+++ b/sass/_table.scss
@@ -16,11 +16,11 @@ table tfoot th {
 }
 
 table caption {
-  padding: 0.5em;
+  // padding: 0.5em;
 }
 
 table th,
 table td {
-  padding: 0.5em;
+  // padding: 0.5em;
   border: 1px solid vars.$border-color;
 }
