--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -3,8 +3,8 @@
 
 * {
   @include vars.box-sizing;
-  // font-family: vars.$system-font;
-  font-family: "Poppins", sans-serif;
+  // font-family: "Poppins", sans-serif;
+  font-family: vars.$system-font;
   line-height: 1.5;
 }
 
@@ -13,8 +13,6 @@ a {
 }
 
 img {
-  display: block;
-  margin: 0 0 1rem;
   max-width: 100%;
 }
 
@@ -48,7 +46,7 @@ body {
       "aside"
       "main"
       "footer";
-      margin: 0;
+    margin: 0;
   }
 }
 
