--- a/sass/_code.scss
+++ b/sass/_code.scss
@@ -1,6 +1,5 @@
 @use "vars";
 
-/* Code formatting */
 pre,
 code {
   border: 1px solid vars.$border-color;
@@ -9,16 +8,14 @@ code {
 }
 
 code {
-  line-height: 1.5;
+  padding: 1px 2px;
 }
 
 pre {
-  // padding: 0.5rem 1rem;
+  padding: 0.25rem 0.5rem;
   // overflow-x: auto;
 
   > code {
     border: 0;
-    // padding-right: 0;
-    // padding-left: 0;
   }
 }
