--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,3 +1,18 @@
+{# {% if section %}
+<section class="pagination">
+	{% if paginator.previous -%}
+	<a href="{{ paginator.previous | safe }}" class="left arrow">&#8592;</a>
+	{%- endif %}
+	{% if paginator.previous or paginator.next -%}
+	<span>{{ paginator.current_index }}</span>
+	{%- endif %}
+	{% if paginator.next -%}
+	<a href="{{ paginator.next | safe }}" class="right arrow">&#8594;</a>
+	{%- endif %}
+</section>
+{% endif %} #}
+
+
 <nav>
   <ul>
     <li><a href="{{ config.base_url }}">Home </a></li>
