--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -1,4 +1,4 @@
-<section class="sidebar">
+<aside>
 
   <a href="{{ config.base_url | safe }}" class="site-title">
     <h2>{{ config.title }}</h2>
@@ -23,4 +23,4 @@
   
   {% endif %}
 
-</section>
+</aside>
