--- a/templates/partials/pagination.html
+++ b/templates/partials/pagination.html
@@ -1,11 +1,5 @@
-{% if paginator.pages %}
-<section class="catalogue">
-	{% for page in paginator.pages -%}
-	{{ macros::page(page=page) }}
-	{%- endfor %}
-</section>
-
-{# <section class="pagination">
+{% if section %}
+<section class="pagination">
 	{% if paginator.previous -%}
 	<a href="{{ paginator.previous | safe }}" class="left arrow">&#8592;</a>
 	{%- endif %}
@@ -15,5 +9,5 @@
 	{% if paginator.next -%}
 	<a href="{{ paginator.next | safe }}" class="right arrow">&#8594;</a>
 	{%- endif %}
-</section> #}
+</section>
 {% endif %}
