--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
     {% include "partials/sidebar.html" %}
   </aside>
 
-  {% if section %}
+  {% if paginator.pages %}
   {% include "partials/pagination.html" %}
   {% endif %}
 
