--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,22 +1,20 @@
-{# {% if section %}
-<section class="pagination">
-	{% if paginator.previous -%}
-	<a href="{{ paginator.previous | safe }}" class="left arrow">&#8592;</a>
-	{%- endif %}
-	{% if paginator.previous or paginator.next -%}
-	<span>{{ paginator.current_index }}</span>
-	{%- endif %}
-	{% if paginator.next -%}
-	<a href="{{ paginator.next | safe }}" class="right arrow">&#8594;</a>
-	{%- endif %}
-</section>
-{% endif %} #}
-
-
-<nav>
+{# <nav>
   <ul>
     <li><a href="{{ config.base_url }}">Home </a></li>
     <li><a href="test/">Test </a></li>
     <li><a href="music/">Music </a></li>
   </ul>
+</nav> #}
+
+<nav>
+  {%- for sidebar in config.extra.sidebar %}
+  <ul class="sublist-nav">
+    {%- for item in sidebar.urls %}
+    <li>
+      {# <a href="{{item.url}}" target="_blank">{{item.name}}</a> #}
+      <a href="{{ config.base_url }}{{ item.url }}">{{item.name}}</a>
+    </li>
+    {% endfor %}
+  </ul>
+  {%- endfor %}
 </nav>
