--- a/sass/_pagination.scss
+++ b/sass/_pagination.scss
@@ -1,14 +1,14 @@
 @use "vars";
 
 .pagination {
+  border-top: 0.5px solid vars.$border-color;
   grid-area: pagination;
   text-align: center;
-  // border-top: 0.5px solid vars.$border-color;
   position: relative;
   // margin-top: min(2rem);
   // margin-top: max(12rem);
   // margin-bottom: 1rem;
-  padding: 1rem;
+  padding: 0.5rem;
 
   span {
     font-size: 1.1rem;
@@ -29,6 +29,7 @@
     @include vars.transition(all 0.3s ease-out);
     color: vars.$font-color;
     position: absolute;
+    font-size: 1.2rem;
 
     &:hover,
     &:focus {
