--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -8,10 +8,13 @@
 .sidebar-nav-title,
 .sidebar-title {
   color: vars.$font-color;
+  margin-bottom: 0;
 }
 
 .sublist-nav {
   list-style-type: none;
+  padding-left: 1.2rem;
+  margin-top: 0.5rem;
 }
 
 .sublist-toc {
