--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,9 @@
   {% include "partials/pagination.html" %}
   {% endif %}
 
-  {# <footer>
+  <footer>
     {% include "partials/footer.html" %}
-  </footer> #}
+  </footer>
 
   {# {% include "partials/scripts.html" %} #}
 </body>
