--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,6 +1,6 @@
 <nav>
   {%- for sidebar in config.extra.sidebar %}
-  <ul class="sublist-nav">
+  <ul class="sublist-footer">
     {%- for item in sidebar.urls %}
     <li>
       {# <a href="{{item.url}}" target="_blank">{{item.name}}</a> #}
