--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -17,6 +17,11 @@
   margin-top: 0.5rem;
 }
 
+.sublist-footer {
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 0.5rem;
+}
 .sublist-toc {
   font-size: 14px; //16px
   list-style-type: disc;
