--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -1,30 +1,13 @@
-// CSS root Variables
-:root {
-  --system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
-    Helvetica, Arial, sans-serif;
-  --default-color: #000; // #555
-  --color-background: #d9d9d9;
-  --color-gradient: linear-gradient(90deg, #eee, #f9f9f9, #eee);
-  --color-card-background: #fff;
-  --color-header: #000;
-  --color-info: #363949;
-  --color-border: #807b7b;
-  --box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  --page-width: 750px;
-  --sidebar-width: 250px;
-  --mobile-breakpoint: 600px;
-  --color-link: #4e8641;
-}
-
 // SCSS Variables
-$system-font: var(--system-font);
-$font-color: var(--default-color);
-$background-color: var(--color-background);
-$page-width: var(--page-width);
-$sidebar-width: var(--sidebar-width);
-$mobile-breakpoint: var(--mobile-breakpoint);
-$border-color: var(--color-border);
-$link-color: var(--color-link);
+$system-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
+Helvetica, Arial, sans-serif;
+$font-color: #000;
+$background-color: #d9d9d9;
+$border-color: #807b7b;
+$link-color: #4e8641;
+$mobile-breakpoint: 1000px;
+$page-width: 750px;
+$sidebar-width: 250px;
 
 //Mixins
 @mixin min-screen($min-width: $body-width) {
