--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,24 +1,8 @@
 @charset "utf-8";
 
-// Core Styles
-@use "normalize";
+@use "new-reset";
 @use "vars";
 @use "base";
-
-// Modules
-@use "code";
-@use "sidebar";
-@use "table";
-
-// Unused Styles
-// @use "card";
-// @use "hamburger";
-// @use "music";
-// @use "typewriter";
-
-// Other Styles
-@use "pagination";
-@use "catalogue";
+// @use "table";
+// @use "sidebar";
 @use "custom";
-
-// @use "tufte";
