--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -19,7 +19,7 @@
 
   <p>{{ config.description }}</p>
 
-  {# {% include "partials/sidebar-nav.html" %} #}
+  {% include "partials/sidebar-nav.html" %}
   
   {% endif %}
 
