--- a/templates/partials/sidebar-nav.html
+++ b/templates/partials/sidebar-nav.html
@@ -15,7 +15,7 @@
 
 <nav>
   <ul class="head-links">
-    {% for menu.item in config.extra.menu %}
+    {% for item in config.extra.menu %}
     <li><a href="{{ get_url(path=item.url )}}">{{ item.name }}</a>
     </li>
     {% endfor %}
