add config sidebar-nav

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
-{% include "partials/sidebar.html" %}
-
 {% block content %}
 {{ section.content | safe }}
-{% include "partials/paginator.html" %}
+{# {% include "partials/paginator.html" %} #}
 {% endblock content %}
