--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{# {% include "partials/sidebar.html" %} #}
+{% include "partials/sidebar.html" %}
 
 {% block content %}
 {{ section.content | safe }}
