--- a/templates/partials/sidebar-nav.html
+++ b/templates/partials/sidebar-nav.html
@@ -1,22 +1,9 @@
-<!-- <nav>
-  {%- for sidebar in config.extra.sidebar %}
-  <h3 class="sidebar-nav-title">
-    {{ sidebar.name }}
-  </h3>
-  <ul class="sublist-nav">
-    {%- for item in sidebar %}
-    <li>
-      <a href="{{item.url}}" target="_blank">{{item.name}}</a>
-    </li>
-    {% endfor %}
-  </ul>
-  {%- endfor %}
-</nav> -->
-
 <nav>
   <ul class="head-links">
-    {% for item in config.extra.menu %}
-    <li><a href="{{ get_url(path=item.url )}}">{{ item.name }}</a>
+    {% for link in config.extra.links -%}
+    <li>
+      <a href="{{ link.url }}" aria-label="{{ link.name }}" target="_blank" rel='noreferrer noopener'>{{ link.name }}
+      </a>
     </li>
     {% endfor %}
   </ul>
