--- a/templates/partials/sidebar-nav.html
+++ b/templates/partials/sidebar-nav.html
@@ -2,8 +2,8 @@
   <ul class="head-links">
     {% for link in config.extra.links -%}
     <li>
-      <a href="{{ link.url }}" aria-label="{{ link.name }}" target="_blank" rel='noreferrer noopener'>{{ link.name }}
-      </a>
+      {# <a href="{{ link.url }}" aria-label="{{ link.name }}" target="_blank" rel='noreferrer noopener'>{{ link.name }}</a> #}
+      <a href="{{ link.url }}" aria-label="{{ link.name }}">{{ link.name }}</a>
     </li>
     {% endfor %}
   </ul>
