--- a/templates/section.html
+++ b/templates/section.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
-{% include "partials/sidebar.html" %}
-
 {% block content %}
+<h1>{{ section.title }}</h1>
 {{ section.content | safe }}
 {% endblock content %}
