--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,28 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h1>{{ section.title }}</h1>
 {{ section.content | safe }}
-{# {% include "partials/paginator.html" %} #}
+
+{% if section.pages %}
+{% for page in section.pages %}
+<hr>
+<article class="post">
+  <time itemprop="datePublished" datetime="{{ page.date | safe }}">{{ page.date | date(format="%B %e, %Y") | safe }} •
+    {{
+    page.reading_time }} minutes</time>
+  <a href="{{ page.permalink }}">
+    <h1 class="post-title">{{ page.title | safe }}</h1>
+  </a>
+  {% if page.description %}
+  <p>{{ page.description | safe }}</p>
+  {% else %}
+  {% if page.summary %}
+  <p>{{ page.summary | safe }}</p>
+  {% endif %}
+  {% endif %}
+  <a href="{{ page.permalink | safe }}">Continue reading…</a>
+</article>
+{% endfor %}
+{% endif %}
 {% endblock content %}
