--- a/templates/categories/list.html
+++ b/templates/categories/list.html
@@ -1,4 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+<ul class="base-list">
+  {% for category in terms %}
+  <li>
+    <a href="{{ category.permalink }}">{{ category.name | capitalize }}</a> ({{ category.pages | length }})
+  </li>
+  {% endfor %}
+</ul>
 {% endblock content %}
