--- a/templates/partials/sidebar-nav.html
+++ b/templates/partials/sidebar-nav.html
@@ -1,9 +1,16 @@
 <nav>
   <ul class="head-links">
-    {% for link in config.extra.links -%}
+    {% for link in config.extra.internalLinks -%}
     <li>
-      {# <a href="{{ link.url }}" aria-label="{{ link.name }}" target="_blank" rel='noreferrer noopener'>{{ link.name }}</a> #}
-      <a href="{{ link.url }}" aria-label="{{ link.name }}">{{ link.name }}</a>
+      <a href="{{ get_url(path=link.url )}}/" aria-label="{{ link.name }}">{{ link.name }}</a>
+    </li>
+    {% endfor %}
+    <br>
+    {% for link in config.extra.externalLinks -%}
+    <li>
+      <a href="{{ get_url(path=link.url )}}/" aria-label="{{ link.name }}" target="_blank" rel='noreferrer noopener'>{{
+        link.name
+        }}</a>
     </li>
     {% endfor %}
   </ul>
